# edb-debugger-mcp

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LINKEDIN_POST.txt  LINKEDIN_REPLY.txt  Makefile  README.md  core.299988  edb_debugger_mcp.py  edb_models.py  gdb_backend.py  pwntools_mcp.py  pyproject.toml  pytest.ini  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
binaryninja_mcp/: README.md  __init__.py  actions.py  mcp_client.py  overlay_renderer.py  plugin.json  sidebar_widget.py
docs/: demo_bin  demo_bin.c  demo_splitscreen.py  demo_workflow.py  edb-demo.cast  edb-splitscreen.cast  edb-workflow.cast
edb_debugger_mcp/: __init__.py  _mcp.py  composite_tools.py  edb_models.py  prompts.py  tools.py
examples/: re_analyze_ls.py  re_workflow_demo.py
examples/canary-leak/: README.md  canary-leak.c  exploit.py
examples/crackme/: README.md  crackme.c  exploit.py
examples/format-string/: README.md  exploit.py
examples/heap-uaf/: README.md  exploit.py  heap-uaf.c
examples/integer-overflow/: README.md  exploit.py  integer-overflow.c
examples/nx-bypass/: README.md  exploit.py  nx-bypass.c
examples/off-by-one/: README.md  exploit.py  off-by-one.c
examples/ret2win/: README.md  exploit.py  ret2win.c
examples/rop-chain/: README.md  exploit.py  rop-chain.c
examples/shellcode-injection/: README.md  exploit.py  shellcode-injection.c
ghidra_mcp/: README.md  __init__.py  ghidra_bridge.py  mcp_client.py  plugin.json
ida_mcp/: README.md  __init__.py  ida_bridge.py  mcp_client.py
scripts/: generate_tool_table.py  measure_tokens.py  update_description.py
tests/: conftest.py  e2e_re_workflow.py  live_test.py  re_workflow_demo.py  test_backend_parser.py  test_binaryninja_mcp_client.py  test_coverage.py  test_examples.py  test_ida_live.sh  test_ida_plugin.py  test_integration.py  test_mcp_models.py  test_pwntools_tools.py  test_readme_coverage.py
vscode-edb-mcp/: README.md  package.json
vscode-edb-mcp/src/: extension.ts
web_ui/: README.md  requirements.txt  server.py
web_ui/templates/: index.html
x64dbg_mcp/: README.md  __init__.py  mcp_client.py  x64dbg_bridge.py
