[project]
name = "edb-debugger-mcp"
version = "1.0.3"
description = "EDB Debugger MCP — 147 debugging tools for AI-assisted reverse engineering via GDB MI backend. pwntools + Binary Ninja integration."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/oakkaya/edb-debugger-mcp"
Repository = "https://github.com/oakkaya/edb-debugger-mcp"
Documentation = "https://github.com/oakkaya/edb-debugger-mcp#readme"
Issues = "https://github.com/oakkaya/edb-debugger-mcp/issues"

[tool.mcp]
name = "edb_debugger_mcp"
server = "edb_debugger_mcp:mcp"
transport = "stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "edb_debugger_mcp.py",
    "gdb_backend.py",
    "pwntools_mcp.py",
    "binaryninja_mcp/",
]

[project.scripts]
edb-debugger-mcp = "edb_debugger_mcp:main"
