[project]
name = "edb-debugger-mcp"
version = "1.0.12"
description = "EDB (Evan's Debugger) → MCP server. 162 debugging tools for AI-assisted reverse engineering. GDB MI + pwntools (27 tools) + Web UI + IDA Pro + Binary Ninja integration."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/oakkaya/edb-debugger-mcp"
Repository = "https://github.com/oakkaya/edb-debugger-mcp"
Documentation = "https://github.com/oakkaya/edb-debugger-mcp#readme"
Issues = "https://github.com/oakkaya/edb-debugger-mcp/issues"

[tool.mcp]
name = "edb_debugger_mcp"
server = "edb_debugger_mcp:mcp"
transport = "stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "edb_debugger_mcp.py",
    "gdb_backend.py",
    "pwntools_mcp.py",
    "binaryninja_mcp/",
]

[project.scripts]
edb-debugger-mcp = "edb_debugger_mcp:main"
