[project]
name = "edb-debugger-mcp"
version = "1.2.4"
description = "EDB Debugger MCP — 207 tools (157 edb_ + 50 pwntools). AI-assisted reverse engineering with GDB MI, Web UI, IDA Pro, Binary Ninja, and Ghidra integration. Linux x86/x86-64."
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
web = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/oakkaya/edb-debugger-mcp"
Repository = "https://github.com/oakkaya/edb-debugger-mcp"
Documentation = "https://github.com/oakkaya/edb-debugger-mcp#readme"
Issues = "https://github.com/oakkaya/edb-debugger-mcp/issues"

[tool.mcp]
name = "edb_debugger_mcp"
server = "edb_debugger_mcp:mcp"
transport = "stdio"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # module level import not at top of file - needed for ghidra/ida conditional imports
    "E501",  # line too long
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E741",  # ambiguous variable name - cli tools use single-char vars
    "F403",  # star import unable to detect undefined names
    "F405",  # star import may be undefined
    "F811",  # redefinition of unused variable - needed for compat
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "E501", "E701", "E702", "E741", "F401", "F403", "F405", "F841"]
"examples/*" = ["E402", "E501", "E701", "E702", "E741", "F403", "F405", "F401", "F841"]
"scripts/*" = ["E701", "E702", "E741", "F403", "F405", "F401", "F841"]
"ghidra_mcp/*" = ["F401"]
"ida_mcp/*" = ["F401", "F841"]
"binaryninja_mcp/*" = ["F401", "F841"]

[tool.hatch.build.targets.wheel]
packages = [
    "edb_debugger_mcp/",
    "gdb_backend.py",
    "pwntools_mcp.py",
    "edb_models.py",
    "binaryninja_mcp/",
    "web_ui/",
]

[project.scripts]
edb-debugger-mcp = "edb_debugger_mcp:main"
